refactor tests/validation